# python-blosc

./: .gitignore  CMakeLists.txt  requirements_dev.txt  setup.py
c-blosc/: CMakeLists.txt
